Test case fix